// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render type 1`] = `
<i
  className="cf-1u68lwu"
>
  <span
    className="cf-1u9fru1"
  >
    Info-Sign
  </span>
</i>
`;

exports[`should render type/border/spin/muted/white 1`] = `
<i
  className="cf-1kle8k2"
>
  <span
    className="cf-1u9fru1"
  >
    Info-Sign
  </span>
</i>
`;

exports[`should render type/size 1`] = `
<i
  className="cf-1u68lwu"
>
  <span
    className="cf-1u9fru1"
  >
    Info-Sign
  </span>
</i>
`;
